--- a/Writerside/.github/workflows/deploy.yml
+++ b/Writerside/.github/workflows/deploy.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
     - uses: actions/checkout@v2
     
@@ -24,7 +26,7 @@ jobs:
         ./writerside generate-static --instance rabbitmq --output build/webHelpFSK2-all
     
     - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@4.1.5
+      uses: JamesIves/github-pages-deploy-action@v4
       with:
         branch: gh-pages
         folder: build/webHelpFSK2-all 
