--- a/workflows/deploy.yml
+++ b/workflows/deploy.yml
@@ -9,14 +9,16 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      pages: write
+      id-token: write
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     
     - name: Setup Java
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
-        distribution: 'adopt'
-        java-version: '11'
+        distribution: 'temurin'
+        java-version: '17'
     
     - name: Build Writerside
       run: |
@@ -25,8 +27,14 @@ jobs:
         chmod +x writerside
         ./writerside generate-static --instance rabbitmq --output build/webHelpFSK2-all
     
-    - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@v4
+    - name: Setup Pages
+      uses: actions/configure-pages@v2
+    
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v1
       with:
-        branch: gh-pages
-        folder: build/webHelpFSK2-all 
+        path: 'build/webHelpFSK2-all'
+    
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v1
