--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -4,8 +4,6 @@
 <ihp version="2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xsi:noNamespaceSchemaLocation="https://resources.jetbrains.com/writerside/1.0/writerside-cfg.xsd">
     <topics dir="topics"/>
-    <images dir="images" web-path="images"/>
-    <categories src="c.list"/>
-    <vars src="v.list"/>
+    <images dir="images" web-path="rabbitmq-tutorial"/>
     <instance src="rabbitmq.tree"/>
 </ihp>
