--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -26,11 +26,18 @@ jobs:
           instance: ${{ env.INSTANCE }}
           docker-version: ${{ env.DOCKER_VERSION }}
 
+      - name: Debug - List artifacts directory
+        run: |
+          ls -la
+          ls -la artifacts/ || echo "artifacts directory not found"
+          find . -name "*.zip" || echo "No zip files found"
+
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: docs
-          path: artifacts/webHelpFSK2-all.zip
+          path: artifacts/*.zip
+          if-no-files-found: error
 
   deploy:
     needs: build
@@ -44,8 +51,13 @@ jobs:
         with:
           name: docs
 
+      - name: List downloaded files
+        run: ls -la
+
       - name: Unzip artifact
-        run: unzip -O UTF-8 -qq webHelpFSK2-all.zip -d docs
+        run: |
+          unzip -l *.zip
+          unzip -O UTF-8 -qq *.zip -d docs
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
