--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -1,63 +1,66 @@
-name: Build Documentation
+name: Build documentation
 
 on:
   push:
-    branches: [ master ]
+    branches: ["master"]
+  workflow_dispatch:
 
 permissions:
-  contents: write
-  pages: write
   id-token: write
+  pages: write
 
 env:
-  INSTANCE: Writerside/rabbitmq
-  DOCKER_VERSION: 243.21565
+  INSTANCE: 'Writerside/rabbitmq'
+  DOCKER_VERSION: '243.21565'
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      artifact: ${{ steps.define-ids.outputs.artifact }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        
+      - name: Define instance id and artifacts
+        id: define-ids
+        run: |
+          INSTANCE=${INSTANCE#*/}
+          INSTANCE_ID_UPPER=$(echo "$INSTANCE" | tr '[:lower:]' '[:upper:]')
+          ARTIFACT="webHelp${INSTANCE_ID_UPPER}2-all.zip"
+          
+          echo "ARTIFACT=$ARTIFACT" >> $GITHUB_ENV
+          echo "artifact=$ARTIFACT" >> $GITHUB_OUTPUT
 
-      - name: Build documentation
+      - name: Build docs using Writerside Docker builder
         uses: JetBrains/writerside-github-action@v4
         with:
           instance: ${{ env.INSTANCE }}
+          artifact: ${{ env.ARTIFACT }}
           docker-version: ${{ env.DOCKER_VERSION }}
 
-      - name: Debug - List artifacts directory
-        run: |
-          ls -la
-          ls -la artifacts/ || echo "artifacts directory not found"
-          find . -name "*.zip" || echo "No zip files found"
-
-      - name: Upload artifact
+      - name: Save artifact
         uses: actions/upload-artifact@v4
         with:
           name: docs
-          path: artifacts/*.zip
-          if-no-files-found: error
+          path: artifacts/${{ env.ARTIFACT }}
+          retention-days: 7
 
   deploy:
-    needs: build
-    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+    needs: build
+    runs-on: ubuntu-latest
     steps:
-      - name: Download artifact
+      - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
           name: docs
-
-      - name: List downloaded files
-        run: ls -la
+          path: artifacts
 
       - name: Unzip artifact
-        run: |
-          unzip -l *.zip || echo "Failed to list zip contents"
-          unzip -O UTF-8 -qq *.zip -d docs || echo "Failed to unzip"
+        run: unzip -O UTF-8 -qq "artifacts/${{ needs.build.outputs.artifact }}" -d dir
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -65,7 +68,7 @@ jobs:
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs
+          path: dir
 
       - name: Deploy to GitHub Pages
         id: deployment
